<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.leo.calculimc.MainActivity">


    <LinearLayout
        android:layout_width="505dp"
        android:layout_height="805dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="339dp"
            android:layout_height="48dp"
            android:text="@string/texteInit"
            android:gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="41dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:text="@string/textePoids"
        />


        <EditText
            android:id="@+id/editTextNumber1"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:autofillHints="64" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:text="@string/texteTaille" />


        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="342dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:autofillHints="170"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:checkedButton="@+id/radio_centimetre"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="199dp"
                android:layout_height="46dp"
                android:text="@string/texteMetre" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="208dp"
                android:layout_height="47dp"
                android:text="@string/texteCm"
                />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="344dp"
            android:layout_height="18dp"
            android:text="@string/texteAppreciation" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <LinearLayout
            android:layout_width="359dp"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="211dp"
                android:layout_height="49dp"
                android:text="@string/calcul_imc" />

            <Button
                android:id="@+id/button2"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="Reset" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="339dp"
            android:layout_height="24dp"
            android:text="@string/texteResult" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>